# NeoTextSynthesizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bindings.cpp  glyph_cache.cpp  main.cpp  neo_synthesizer.cpp  neo_synthesizer.hpp  pyproject.toml  renderer.cpp  renderer.hpp  textsampler.cpp  textsampler.hpp  utils.cpp  vcpkg.json  worker.cpp  worker.hpp  writer.hpp
.github/workflows/: workflow.yml
python/neots/: __init__.py  cli.py  flatten_wikipedia_generator.py
python/neots/data/: NEOTS_README.md  default_dictionary.txt
python/neots/data/configs/: minimal.json  minimal.yaml  preset.json  preset.yaml
python/neots/data/symbols_characters/: jp_characters.txt  ko_characters.txt  kokuji.txt  symbols.txt  traditional_chars.txt
src/: bindings.cpp  generation_tasks.cpp  generation_tasks.hpp  glyph_cache.hpp  neo_synthesizer.hpp  utils.hpp  worker.hpp  writer.cpp  yaml_utils.cpp  yaml_utils.hpp
src/algorithms/: alpha_blend.cpp  alpha_blend.hpp  colors.cpp  colors.hpp  glyph_cache.cpp  glyph_cache.hpp  paged_bitmap.cpp  paged_bitmap.hpp  transforms.cpp  transforms.hpp
src/backgrounds/: background_resources.cpp  background_resources.hpp  background_sampler.cpp  background_sampler.hpp
src/fonts/: font_resource.cpp  font_resource.hpp  font_selector.cpp  font_selector.hpp  library.cpp  library.hpp  line_shaper.cpp  line_shaper.hpp  text_effects.cpp  text_effects.hpp
src/parallelization/: parallel.cpp  parallel.hpp  parallel.tpp
src/parallelization/tasks/: singletext_task.cpp  singletext_task.hpp
src/text_synth/: renderer.cpp  renderer.hpp  text_synthesizer.cpp  text_synthesizer.hpp  textsampler.cpp  writer.cpp  writer.hpp
src/utils/: utf8_helper.cpp  utf8_helper.hpp  utils.cpp  utils.hpp  yaml_utils.cpp  yaml_utils.hpp
